# cargo-vanish

./: Cargo.toml  README.md
src/: consts.rs  lib.rs  main.rs  project.rs
