[package]
authors = ["Felix Prasanna <fpx@mit.edu>"]
name = "cargo-vanish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
atty = "0.2.14"
clap = { version = "4.3.4", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
toml = "0.7.5"
walkdir = "2.3.3"
